Not only can you see other's reposts, you can now make your own ones!